--- a/index.html
+++ b/index.html
@@ -4,32 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RAG-assisted LLM-based Verification</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      padding: 2rem;
-      line-height: 1.6;
-      max-width: 960px;
-      margin: auto;
-    }
-    h1, h2 {
-      color: #2c3e50;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    .section {
-      margin-bottom: 2rem;
-    }
-    .highlight {
-      background: #eef2f7;
-      padding: 1rem;
-      border-left: 4px solid #3498db;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
