--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 
   <h1> RAG-assisted LLM-based Verification</h1>
   <p><strong>By Mahesh Sadupalli, M.Sc. Artificial Intelligence</strong></p>
+  <div class="section">
+  <h2>🧠 Introduction</h2>
+  <p>
+    Large Language Models (LLMs) like GPT-4 and Claude have transformed how we generate and understand human-like language.
+    However, they come with certain limitations:
+  </p>
+  <ul>
+    <li> May hallucinate or generate inaccurate outputs</li>
+    <li> Cannot access real-time or domain-specific external data</li>
+    <li> Performance degrades in high-stakes or technical domains without training</li>
+  </ul>
+  <p>
+    <strong>Retrieval-Augmented Generation (RAG)</strong> addresses these limitations by combining LLMs with external search:
+  </p>
+  <ul>
+    <li> A retriever selects relevant knowledge from a document store or database</li>
+    <li> The LLM generates responses using the retrieved context</li>
+  </ul>
+  <p>
+    This project applies the RAG+LLM architecture to <strong>hardware verification</strong> and <strong>EDA workflows</strong>, enabling smarter, explainable, and more accurate analysis pipelines.
+  </p>
+</div>
 
   <div class="section">
     <h2>Project Overview</h2>
