--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1> RAG-assisted LLM-based Verification</h1>
   <p><strong>By Mahesh Sadupalli, M.Sc. Artificial Intelligence</strong></p>
   <div class="section">
-  <h2>🧠 Introduction</h2>
+  <h2> Introduction</h2>
   <p>
     Large Language Models (LLMs) like GPT-4 and Claude have transformed how we generate and understand human-like language.
     However, they come with certain limitations:
