--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   <h1> RAG-assisted LLM-based Verification</h1>
   <p><strong>By Mahesh Sadupalli, M.Sc. Artificial Intelligence</strong></p>
+  <p>
+    <strong>Mentor:</strong> Dr. Mahdi Taheri<br>
+    <strong>First Examiner:</strong> Dr.-Ing. habil. Christian Herglotz (Vertretungsprofessur)<br>
+    <strong>Chair:</strong> Fakultät 1 – Fachgebiet Technische Informatik, BTU Cottbus-Senftenberg
+  </p>
+
   <div class="section">
   <h2> Introduction</h2>
   <p>
