--- a/index.html
+++ b/index.html
@@ -62,17 +62,6 @@
   </div>
 
   <div class="section">
-    <h2>Key Research Papers</h2>
-    <ul>
-      <li>LLM-Guided Formal Verification</li>
-      <li>LLM-Assisted Bug Fixing</li>
-      <li>LLMs for Hardware Verification</li>
-      <li>Scalable Semantic Change Detection</li>
-    </ul>
-    <p>We use insights from these papers to construct a 3-stage methodology integrating LLMs into the EDA toolchain.</p>
-  </div>
-
-  <div class="section">
     <h2>Architecture Snapshot</h2>
     <p><em>(Coming soon!)</em> We'll upload the end-to-end RAG+LLM pipeline diagram that illustrates:</p>
     <ul>
@@ -92,6 +81,44 @@
       <li>Word2Vec + LDA (for semantic drift detection)</li>
     </ul>
   </div>
+  <div class="section">
+  <h2> Research Papers</h2>
+
+  <h3>1. Dataset</h3>
+  <ul>
+    <li><a href="#">VERT: A SystemVerilog Assertion Dataset to Improve Hardware Verification with LLMs</a></li>
+    <li><a href="#">AssertionBench: A Benchmark to Evaluate LLMs for Assertion Generation</a></li>
+    <li><a href="#">OpenLLM-RTL: Open Dataset and Benchmark for RTL Generation</a></li>
+    <li><a href="#">VerilogDB: High-Quality Dataset for RTL Generation with Preprocessing</a></li>
+  </ul>
+
+  <h3>2. LLM Verification</h3>
+  <ul>
+    <li><a href="#">LLM Verification</a></li>
+    <li><a href="#">LLMs for Hardware Verification</a></li>
+    <li><a href="#">LLM-Guided Formal Verification</a></li>
+    <li><a href="#">AssertLLM: Hardware Verification Assertions via Multi-LLMs</a></li>
+    <li><a href="#">Continual Learning of Large Language Models – A Comprehensive Survey</a></li>
+    <li><a href="#">Towards Incremental Learning in LLMs – A Critical Review</a></li>
+  </ul>
+
+  <h3>3. Explainable AI (XAI)</h3>
+  <ul>
+    <li><a href="#">Concept Drift: Survey on Monitoring Evolving Environments</a></li>
+    <li><a href="#">Benchmark of Unsupervised Drift Detectors on Real-World Data Streams</a></li>
+  </ul>
+
+  <h3>4. Foundational & Other Papers</h3>
+  <ul>
+    <li><a href="#">Word2Vec: Efficient Estimation of Word Representations</a> – Mikolov et al., Google</li>
+    <li><a href="#">Attention Is All You Need</a> – Vaswani et al., 2017</li>
+    <li><a href="#">Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks (RAG)</a> – Lewis et al., Facebook AI</li>
+    <li><a href="#">LLaMA: Open and Efficient Foundation Language Models</a> – Meta AI</li>
+    <li><a href="#">HybridRAG: Integrating Knowledge Graphs with Vector Retrieval</a></li>
+    <li><a href="#">LDA + Word2Vec: Topic Evolution of Mental Models</a></li>
+  </ul>
+</div>
+
 
   <div class="section">
     <h2>Contact</h2>
