--- a/index.html
+++ b/index.html
@@ -82,42 +82,43 @@
     </ul>
   </div>
   <div class="section">
-  <h2> Research Papers</h2>
+  <h2>📚 Research Papers</h2>
 
   <h3>1. Dataset</h3>
   <ul>
-    <li><a href="#">VERT: A SystemVerilog Assertion Dataset to Improve Hardware Verification with LLMs</a></li>
-    <li><a href="#">AssertionBench: A Benchmark to Evaluate LLMs for Assertion Generation</a></li>
-    <li><a href="#">OpenLLM-RTL: Open Dataset and Benchmark for RTL Generation</a></li>
-    <li><a href="#">VerilogDB: High-Quality Dataset for RTL Generation with Preprocessing</a></li>
+    <li><a href="papers/VERT-ASYSTEMVERILOGASSERTIONDATASETTO IMPROVEHARDWAREVERIFICATIONWITHLLMS.pdf" target="_blank">VERT: A SystemVerilog Assertion Dataset to Improve Hardware Verification with LLMs</a></li>
+    <li><a href="papers/AssertionBench- A Benchmark to Evaluate Large-Language Models for Assertion Generation for Hardware Design.pdf" target="_blank">AssertionBench: A Benchmark for LLMs in Assertion Generation</a></li>
+    <li><a href="papers/OpenLLM-RTL- Open Dataset and Benchmark for LLM-Aided Design RTL Generation.pdf" target="_blank">OpenLLM-RTL: Open Dataset & Benchmark for RTL Generation</a></li>
+    <li><a href="papers/VerilogDB- The Largest, Highest-Quality Dataset with a Preprocessing Framework for LLM-based RTL Generation.pdf" target="_blank">VerilogDB: Preprocessed Dataset for LLM RTL Generation</a></li>
   </ul>
 
   <h3>2. LLM Verification</h3>
   <ul>
-    <li><a href="#">LLM Verification</a></li>
-    <li><a href="#">LLMs for Hardware Verification</a></li>
-    <li><a href="#">LLM-Guided Formal Verification</a></li>
-    <li><a href="#">AssertLLM: Hardware Verification Assertions via Multi-LLMs</a></li>
-    <li><a href="#">Continual Learning of Large Language Models – A Comprehensive Survey</a></li>
-    <li><a href="#">Towards Incremental Learning in LLMs – A Critical Review</a></li>
+    <li><a href="papers/1 LLM Verification.pdf" target="_blank">LLM Verification</a></li>
+    <li><a href="papers/§ LLMs for Hardware verification .pdf" target="_blank">LLMs for Hardware Verification</a></li>
+    <li><a href="papers/6 LLM guided formal verification .pdf" target="_blank">LLM-Guided Formal Verification</a></li>
+    <li><a href="papers/AssertLLM- Generating Hardware Verification Assertions from Design Specifications via Multi-LLMs.pdf" target="_blank">AssertLLM: Assertion Generation with Multi-LLMs</a></li>
+    <li><a href="papers/Continual Learning of Large Language Models- A Comprehensive Survey.pdf" target="_blank">Continual Learning of LLMs – Survey</a></li>
+    <li><a href="papers/Towards Incremental Learning in Large   Language Models- A Critical Review.pdf" target="_blank">Incremental Learning in LLMs – Critical Review</a></li>
   </ul>
 
   <h3>3. Explainable AI (XAI)</h3>
   <ul>
-    <li><a href="#">Concept Drift: Survey on Monitoring Evolving Environments</a></li>
-    <li><a href="#">Benchmark of Unsupervised Drift Detectors on Real-World Data Streams</a></li>
+    <li><a href="papers/One or Two Things We know about Concept Drift  A Survey on Monitoring Evolving Environments.pdf" target="_blank">Survey on Concept Drift Monitoring</a></li>
+    <li><a href="papers/A benchmark and survey of fully unsupervised concept drift detectors on real-world data streams.pdf" target="_blank">Unsupervised Drift Detection – Benchmark and Survey</a></li>
   </ul>
 
   <h3>4. Foundational & Other Papers</h3>
   <ul>
-    <li><a href="#">Word2Vec: Efficient Estimation of Word Representations</a> – Mikolov et al., Google</li>
-    <li><a href="#">Attention Is All You Need</a> – Vaswani et al., 2017</li>
-    <li><a href="#">Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks (RAG)</a> – Lewis et al., Facebook AI</li>
-    <li><a href="#">LLaMA: Open and Efficient Foundation Language Models</a> – Meta AI</li>
-    <li><a href="#">HybridRAG: Integrating Knowledge Graphs with Vector Retrieval</a></li>
-    <li><a href="#">LDA + Word2Vec: Topic Evolution of Mental Models</a></li>
+    <li><a href="papers/Word2Vec.pdf" target="_blank">Word2Vec – Google Research</a></li>
+    <li><a href="papers/Attention.pdf" target="_blank">Attention Is All You Need</a></li>
+    <li><a href="papers/RAG.pdf" target="_blank">Retrieval-Augmented Generation (RAG) – Facebook AI</a></li>
+    <li><a href="papers/LLaMA.pdf" target="_blank">LLaMA: Open and Efficient Foundation Models – Meta AI</a></li>
+    <li><a href="papers/HybridRAG- Integrating Knowledge Graphs and Vector Retrieval   Augmented Generation for Efficient Information Extraction.pdf" target="_blank">HybridRAG: Knowledge Graph + Vector Retrieval</a></li>
+    <li><a href="papers/An integrated latent Dirichlet allocation and Word2vec method for generating the topic evolution of mental models from global to local.pdf" target="_blank">Topic Evolution with LDA + Word2Vec</a></li>
   </ul>
 </div>
+
 
 
   <div class="section">
