--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1> RAG-assisted LLM-based Verification</h1>
   <p><strong>By Mahesh Sadupalli, M.Sc. Artificial Intelligence</strong></p>
   <p>
-    <strong>Mentor:</strong> Dr. Mahdi Taheri<br>
-    <strong>First Examiner:</strong> Dr.-Ing. habil. Christian Herglotz (Vertretungsprofessur)<br>
+    <strong>Supervisor:</strong> Dr. Mahdi Taheri<br>
+    <strong>Examiner:</strong> Dr.-Ing. habil. Christian Herglotz (Vertretungsprofessur)<br>
     <strong>Chair:</strong> Fakultät 1 – Fachgebiet Technische Informatik, BTU Cottbus-Senftenberg
   </p>
 
